# inverse-problem-vnet

./: .gitignore  CMakeLists.txt  README.md  jobscript.pbs  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
data/: df_simu.csv
data/img/: config.docx
data/outputs/: df_simu_0.csv  df_simu_1.csv  df_simu_2.csv  df_simu_3.csv  df_simu_baseline.csv
doc/guidelines/: csmi-moco.ipynb
notebooks/: Apprentissage.ipynb  ApprentissageVnet - 2.ipynb  InterpolationUnet2.ipynb  NewVnetLearning.ipynb  SimplificationDesEntrées.ipynb  TraitementDesDonnées.ipynb  Visualisation2D.ipynb  inputs_compression.ipynb  merge_videos.drp  new_vnet_learning.ipynb  new_vnet_simplified.ipynb
notebooks/.ipynb_checkpoints/: SimplificationDesEntrées-checkpoint.ipynb  Visualisation2D - Difference-checkpoint.ipynb  Visualisation2D-checkpoint.ipynb  inputs_compression-checkpoint.ipynb  new_vnet_simplified_local-checkpoint.ipynb
slides/: main.tex
slides/Figures/: Classification.drawio  DRNN.drawio  DRNNVert2.drawio  DRNNVertical.drawio  Dense.drawio  Dicretisation2D.drawio  Entrees.drawio  Flatten.drawio  MLP.drawio  MaxPool.drawio  MilestonesRoadmap.pptx  ProblemeInverse.drawio  TransferRadiatif.drawio  Vnet.drawio
slides/Sections/: Section1.tex  Section2.tex  Section3.tex  Section4.tex  Section5.tex  SectionWithVideo.tex
src/: config.cpp  exporter.cpp  main.cpp  mesh.cpp  solver.cpp
src/config/: data_dump.sh  final_d.cfg  final_l.cfg  final_r.cfg  final_u.cfg  io_names.txt  simu_pd_d.cfg  simu_pd_l.cfg  simu_pd_r.cfg  simu_pd_u.cfg  template_d.txt  template_l.txt  template_r.txt  template_u.txt  test_numpy.cfg
src/include/: config.hpp  exporter.hpp  mesh.hpp  solver.hpp  vector_ops.hpp
(+4 files in other folders)
